# cpu-ray-tracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  taskfile.yml
src/: constants.hpp  main.cpp
src/camera/: camera.cpp  camera.hpp
src/elements/: color.cpp  color.hpp  material.cpp  material.hpp  point3.hpp  ray.cpp  ray.hpp
src/hittables/: hittable-list.cpp  hittable-list.hpp  hittable.cpp  hittable.hpp  sphere.cpp  sphere.hpp
src/utils/: interval.cpp  interval.hpp  io.cpp  io.hpp  vec3.cpp  vec3.hpp  worldgen.cpp  worldgen.hpp
